# funny_simpsons_pranknames

./: README.md  hello.py  prank_names_script.py  pyproject.toml  requirements.txt
